--- a/webapp-bookstore/src/main/resources/templates/layout.html
+++ b/webapp-bookstore/src/main/resources/templates/layout.html
@@ -38,16 +38,16 @@
                             Cart <span id="cart-item-count">(0)</span>
                         </a>
                     </li>
-<!--                    <li class="nav-item" sec:authorize="!isAuthenticated()">-->
-<!--                        <a class="nav-link" href="/oauth2/authorization/bookstore-webapp">-->
-<!--                            Login-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li class="nav-item" sec:authorize="isAuthenticated()">-->
-<!--                        <a class="nav-link" href="/logout">-->
-<!--                            Logout-->
-<!--                        </a>-->
-<!--                    </li>-->
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" href="/oauth2/authorization/bookstore-webapp">
+                            Login
+                        </a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="/logout">
+                            Logout
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
